--- a/assest/css/styles.css
+++ b/assest/css/styles.css
@@ -288,7 +288,9 @@ a:focus {
         padding: 20px;
         text-align: center;
     }
-
+    nav{
+        display: none; /* 隱藏元素 */
+    }
     nav ul {
         
         list-style-type: none;
@@ -367,7 +369,7 @@ a:focus {
         text-align: center;
     }
     .carousel{
-
+        
         height: 200px;
         width: 100%;
         float:left;
